bug: fix pipeline-view not showing as a whole in simulation view    - add change for flex-direction to column for screen sizes      lesser then 1000px
feat: add working progressbar for CLI step

--- a/projects/simbad-client/src/app/features/examples/simulation-pipeline/components/steps/report-step/report-step.component.scss
+++ b/projects/simbad-client/src/app/features/examples/simulation-pipeline/components/steps/report-step/report-step.component.scss
@@ -3,10 +3,15 @@
     height: 100%;
 }
 
+@media screen and ( max-width: 1000px) {
+    .step-container {
+        flex-direction: column;
+    }
+}
+
 .artifact-list {
     flex: 1 1 0;
     margin-right: 10px;
-    max-width: 400px;
 }
 
 .task-context {
